--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
             <a class="nav__right__item" href="/technology">technology.</a>
             <a class="nav__right__item" href="/team">team.</a>
             <a class="nav__right__item" href="/statechannels">state channels.</a>
+            <a class="nav__right__item" href="/getting-started">docs.</a>
             <a class="nav__right__item" target="_blank" href="https://specs.counterfactual.com">specs.</a>
             <a class="nav__right__item" target="_blank" href="http://github.com/counterfactual">github.</a>
             <a class="nav__right__item" target="_blank" href="http://counterfactual.com/chat">chat.</a>
@@ -48,6 +49,7 @@
           <a class="mobile-menu__item" href="/technology">technology.</a>
           <a class="mobile-menu__item" href="/team">team.</a>
           <a class="mobile-menu__item" href="/statechannels">state channels.</a>
+          <a class="mobile-menu__item" href="/getting-started">docs.</a>
           <a class="mobile-menu__item" target="_blank" href="https://specs.counterfactual.com">specs.</a>
           <a class="mobile-menu__item" target="_blank" href="http://github.com/counterfactual">github.</a>
           <a class="mobile-menu__item" target="_blank" href="http://counterfactual.com/chat">chat.</a>
