added full name for Joel, added Santiago

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -131,8 +131,9 @@
                   <ul class="member-list">
                     <li>Erik Bryn</li>
                     <li>Patience Tema Baron</li>
-                    <li>Joel Bertoldi</li>
+                    <li>Joel A. Villarreal Bertoldi</li>
                     <li>Alon Bukai</li>
+                    <li>Santiago Pérsico</li>
                   </ul>
                 </div>
               </div>
