update index content

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon"> -->
-  <title>Counterfactual</title>
+  <title>State Channels</title>
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
@@ -70,7 +70,7 @@
 
           <div class="callout">
             <div class="callout__content">
-              <h2 class="callout__content__heading">Counterfactual is a protocol for scalable blockchain applications.</h2>
+              <h2 class="callout__content__heading">State channels scale peer-to-peer blockchain interactions.</h2>
               <div class="callout__content__buttons">
                 <a class="btn btn--stroke" target="_blank" href="https://medium.com/statechannels">learn more</a>
               </div>
@@ -106,7 +106,7 @@
               </g>
             </svg>
             <p class="footer__left__text">
-              Copyright © 2019 Counterfactual contributors
+              Copyright © 2019 State Channels contributors
             </p>
           </div>
 
