--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,8 @@
           <!-- #if desktop -->
           <nav class="nav__right mobile-off">
             <a class="nav__right__item" href="/team">team.</a>
-            <a class="nav__right__item" target="_blank" href="http://github.com/counterfactual">github.</a>
-            <a class="nav__right__item" target="_blank" href="https://research.statechannels.org/login">forum.</a>
+            <a class="nav__right__item" target="_blank" href="https://github.com/statechannels">github.</a>
+            <a class="nav__right__item" target="_blank" href="https://research.statechannels.org">forum.</a>
             <a class="nav__right__item" href="/standards">standards.</a>
             <a class="nav__right__item" target="_blank" href="https://medium.com/statechannels">blog.</a>
           </nav>
@@ -59,8 +59,8 @@
         <div class="mobile-menu mobile-only">
           <button class="mobile-menu__close">close</button>
           <a class="mobile-menu__item" href="/team">team.</a>
-          <a class="mobile-menu__item" target="_blank" href="http://github.com/counterfactual">github.</a>
-          <a class="mobile-menu__item" target="_blank" href="https://research.statechannels.org/login">forum.</a>
+          <a class="mobile-menu__item" target="_blank" href="https://github.com/statechannels">github.</a>
+          <a class="mobile-menu__item" target="_blank" href="https://research.statechannels.org">forum.</a>
           <a class="mobile-menu__item" href="/standards">standards.</a>
           <a class="mobile-menu__item" target="_blank" href="https://medium.com/statechannels">blog.</a>
         </div>
@@ -78,7 +78,7 @@
             <div class="callout__content">
               <h2 class="callout__content__heading">State channels scale peer-to-peer blockchain interactions.</h2>
               <div class="callout__content__buttons">
-                <a class="btn btn--stroke" target="_blank" href="https://medium.com/statechannels">learn more</a>
+                <a class="btn btn--stroke" target="_blank" href="/standards">learn more</a>
               </div>
             </div>
           </div>
