--- a/public/standards/index.html
+++ b/public/standards/index.html
@@ -46,8 +46,8 @@
           <!-- #if desktop -->
           <nav class="nav__right mobile-off">
             <a class="nav__right__item" href="/team">team.</a>
-            <a class="nav__right__item" target="_blank" href="http://github.com/counterfactual">github.</a>
-            <a class="nav__right__item" target="_blank" href="https://research.statechannels.org/login">forum.</a>
+            <a class="nav__right__item" target="_blank" href="https://github.com/statechannels">github.</a>
+            <a class="nav__right__item" target="_blank" href="https://research.statechannels.org">forum.</a>
             <a class="nav__right__item active" href="/standards">standards.</a>
             <a class="nav__right__item" target="_blank" href="https://medium.com/statechannels">blog.</a>
           </nav>
@@ -63,8 +63,8 @@
         <div class="mobile-menu mobile-only">
           <button class="mobile-menu__close">close</button>
           <a class="mobile-menu__item" href="/team">team.</a>
-          <a class="mobile-menu__item" target="_blank" href="http://github.com/counterfactual">github.</a>
-          <a class="mobile-menu__item" target="_blank" href="https://research.statechannels.org/login">forum.</a>
+          <a class="mobile-menu__item" target="_blank" href="https://github.com/statechannels">github.</a>
+          <a class="mobile-menu__item" target="_blank" href="https://research.statechannels.org">forum.</a>
           <a class="mobile-menu__item active" href="/standards">standards.</a>
           <a class="mobile-menu__item" target="_blank" href="https://medium.com/statechannels">blog.</a>
         </div>
