update bad link

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -136,7 +136,7 @@
                   </ul>
                 </div>
                 <div class="team-content__item__logos__item">
-                    <a class="proto" href="https://magmo.com/">
+                    <a class="proto" href="https://consensys.net/">
                       <svg viewBox="0 0 4793.76 1081.72">
                         <title>consensys-logo-horizontal</title>
                         <g id="Consensys">
