fix: translation link

--- a/public/standards/index.html
+++ b/public/standards/index.html
@@ -69,7 +69,7 @@
 
             <h2 class="statechannels__heading">A Unified State Channel Specification for Ethereum</h2>
             <div class="date">
-                August 26, 2019 - <a href="/chinese_index">中文</a>
+                August 26, 2019 - <a href="/index_chinese">中文</a>
             </div>
 
             <p class="statechannels__abstract">
