--- a/public/index_chinese/index.html
+++ b/public/index_chinese/index.html
@@ -69,7 +69,7 @@
 
             <h2 class="statechannels__heading">A Unified State Channel Specification for Ethereum</h2>
             <div class="date">
-                August 26, 2019 - <a href="https://statechannels.org/chinese_index.html">中文</span>
+                August 26, 2019 - <a href="/index_chinese">中文</a>
             </div>
 
             <p class="statechannels__abstract">
