add chinese translation

--- a/public/index_chinese/index.html
+++ b/public/index_chinese/index.html
@@ -67,25 +67,25 @@
 
           <div class="statechannels">
 
-            <h2 class="statechannels__heading">A Unified State Channel Specification for Ethereum</h2>
+            <h2 class="statechannels__heading">以太坊状态通道扩容社区标准化宣言</h2>
             <div class="date">
-                August 26, 2019 - <a href="/index_chinese">中文</a>
+              二零壹九年八月二十六日 - <a href="/standards">English</a>
             </div>
 
             <p class="statechannels__abstract">
-                Today we're excited to announce an initiative to unify Ethereum's State Channels projects around a single standard.
+              今天我们激动地宣布，以太坊社区的状态通道链下扩容项目团结一致，将共同提出同一套社区标准。
             </p>
             <p class="statechannels__abstract">
-              Since meeting in NYC in May, we have been working behind the scenes to adopt a single specification, laying the foundation for a fully interoperable ecosystem of State Channels applications.
+              自从我们五月在纽约会晤以来，我们一直在幕后商讨并努力设计统一的规范标准，为可互通操作的状态通道应用生态奠定基础。
             </p>
             <p class="statechannels__abstract">
-              This project builds on years of research & development by our teams, as each of us pushed forward different components of the tech stack. Uniting around a single specification is another critical milestone, with many benefits for the Ethereum ecosystem.
+              在过去我们每个人都在为推动技术栈不同组成部分做出了很多贡献，所以此社区标准建立在我们各个团队多年研发的共同基础之上。团结在此统一的社区标准，将是链下扩容生态的一大里程碑，也将为以太坊带来更多的优势。
             </p>
             <p class="statechannels__abstract">
-              Our goal is to enable the best possible user and developer experience for State Channels. All wallets, clients, or applications that use the State Channels specification will be compatible by default. Developers and users will not need to worry about supporting a multitude of competing standards, avoiding fragmentation.
+              我们的目标是为所有状态通道项目提供最佳用户和开发者体验。所有使用状态通道的钱包、客户端以及应用都会彼此兼容。开发者和用户无需为支持多个标准而担忧，从而避免碎片化。
             </p>
             <p class="statechannels__abstract">
-              Over the next few weeks, we will be sharing more information about this project and what it means for the Ethereum ecosystem.
+              在接下来的几周内，我们将会分享更多关于此社区标准的详情，并讲解此社区标准对以太坊生态的重大意义。
             </p>
           </div>
 
@@ -95,7 +95,7 @@
       <div class="section">
         <div class="container">
           <div class="signed">
-            <h3 class="signed__heading">Signed</h3>
+            <h3 class="signed__heading">签名,</h3>
             <div class="signed__logos">
               <a target="_blank" href="https://www.celer.network/">
                 <img src="../assets/logos/celer.svg" alt="Celer">
