add chinese footer copy

--- a/public/index_chinese/index.html
+++ b/public/index_chinese/index.html
@@ -307,7 +307,7 @@
 
           <div class="footer__right">
             <p>
-              Join us on the research forum! <a href="https://research.statechannels.org/" target="_blank">research.statechannels.org</a>
+              加入我们的研究论坛! <a href="https://research.statechannels.org/" target="_blank">research.statechannels.org</a>
             </p>
           </div>
         </footer>
