add netlify logo

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -357,7 +357,7 @@
             </p>
           </div>
         </footer>
-
+        <div class="hosted-by"><span>Hosted by</span> <img style="width: 5rem;" src="../assets/netlify-logo.svg" alt="Netlify" /></div>
       </div>
     </div>
     <!-- End Footer -->
