add og meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="theme-color" content="#ffffff">
   <title>State Channels</title>
+  <meta name="Description" content="State channels scale peer-to-peer blockchain interactions.">
+  <meta property="og:title" content="State Channels" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://statechannels.org/" />
+  <meta property="og:image" content="./assets/logo.svg" />
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
