--- a/public/standards/index.html
+++ b/public/standards/index.html
@@ -13,6 +13,11 @@
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="theme-color" content="#ffffff">
   <title>Standards | State Channels</title>
+  <meta name="Description" content="White Paper - A Unified State Channel Specification for Ethereum">
+  <meta property="og:title" content="Standards | State Channels" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://statechannels.org/standards/" />
+  <meta property="og:image" content="../assets/logo.svg" />
   <link rel="stylesheet" href="/app.css">
 </head>
 
