--- a/public/team/index.html
+++ b/public/team/index.html
@@ -12,6 +12,11 @@
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="theme-color" content="#ffffff">
   <title>Team | State Channels</title>
+  <meta name="Description" content="State Channels is an Open Source project that relies on the tireless support of individual contributors.">
+  <meta property="og:title" content="Team | State Channels" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://statechannels.org/team/" />
+  <meta property="og:image" content="../assets/logo.svg" />
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
