--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,21 @@
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="theme-color" content="#ffffff">
   <title>State Channels</title>
-  <meta name="Description" content="State channels scale peer-to-peer blockchain interactions.">
-  <meta property="og:title" content="State Channels" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://statechannels.org/" />
-  <meta property="og:image" content="./assets/logo.svg" />
+  <meta name="description" content="State channels scale peer-to-peer blockchain interactions.">
+  <meta property="og:description" content="State channels scale peer-to-peer blockchain interactions.">
+  <meta name="twitter:description" content="State channels scale peer-to-peer blockchain interactions.">
+
+  <meta property="og:site_name" content="State Channels">
+  <meta property="og:title" content="State Channels">
+  <meta property="og:url" content="https://statechannels.org/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="./assets/logo.png">
+
+  <meta name="twitter:card" content="website">
+  <meta name="twitter:title" content="State Channels">
+  <meta name="twitter:url" content="https://statechannels.org/">
+  <meta name="twitter:image" content="./assets/logo.png">
+
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
