--- a/public/standards/index.html
+++ b/public/standards/index.html
@@ -13,11 +13,21 @@
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="theme-color" content="#ffffff">
   <title>Standards | State Channels</title>
-  <meta name="Description" content="White Paper - A Unified State Channel Specification for Ethereum">
-  <meta property="og:title" content="Standards | State Channels" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://statechannels.org/standards/" />
-  <meta property="og:image" content="../assets/logo.svg" />
+
+  <meta name="description" content="A Unified State Channel Specification for Ethereum">
+  <meta property="og:description" content="A Unified State Channel Specification for Ethereum">
+  <meta name="twitter:description" content="A Unified State Channel Specification for Ethereum">
+
+  <meta property="og:site_name" content="State Channels">
+  <meta property="og:title" content="Standards | State Channels">
+  <meta property="og:url" content="https://statechannels.org/standards/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="../assets/logo.png">
+
+  <meta name="twitter:card" content="website">
+  <meta name="twitter:title" content="Standards | State Channels">
+  <meta name="twitter:url" content="https://statechannels.org/standards/">
+  <meta name="twitter:image" content="../assets/logo.png">
   <link rel="stylesheet" href="/app.css">
 </head>
 
