add full img url

--- a/public/index.html
+++ b/public/index.html
@@ -11,23 +11,23 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3531ff">
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="theme-color" content="#ffffff">
-  <title>State Channels</title>
   <meta name="description" content="State channels scale peer-to-peer blockchain interactions.">
+  
   <meta property="og:description" content="State channels scale peer-to-peer blockchain interactions.">
-  <meta name="twitter:description" content="State channels scale peer-to-peer blockchain interactions.">
-
   <meta property="og:site_name" content="State Channels">
   <meta property="og:title" content="State Channels">
   <meta property="og:url" content="https://statechannels.org/">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="./assets/logo.png">
-
-  <meta name="twitter:card" content="website">
+  <meta property="og:image" content="https://statechannels.org/assets/logo.svg">
+  
   <meta name="twitter:title" content="State Channels">
+  <meta name="twitter:description" content="State channels scale peer-to-peer blockchain interactions.">
+  <meta name="twitter:card" content="website">
   <meta name="twitter:url" content="https://statechannels.org/">
-  <meta name="twitter:image" content="./assets/logo.png">
+  <meta name="twitter:image" content="https://statechannels.org/assets/logo.svg">
 
   <link rel="stylesheet" href="/app.css">
+  <title>State Channels</title>
 </head>
 <body>
   <div class="wrapper">
