--- a/public/index_chinese/index.html
+++ b/public/index_chinese/index.html
@@ -12,23 +12,24 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3531ff">
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="theme-color" content="#ffffff">
-  <title>Standards | State Channels</title>
 
   <meta name="description" content="State channels scale peer-to-peer blockchain interactions.">
-  <meta property="og:description" content="State channels scale peer-to-peer blockchain interactions.">
-  <meta name="twitter:description" content="State channels scale peer-to-peer blockchain interactions.">
 
   <meta property="og:site_name" content="State Channels">
   <meta property="og:title" content="State Channels">
+  <meta property="og:description" content="State channels scale peer-to-peer blockchain interactions.">
   <meta property="og:url" content="https://statechannels.org/">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="../assets/logo.png">
+  <meta property="og:image" content="https://statechannels.org/assets/logo.svg">
 
-  <meta name="twitter:card" content="website">
   <meta name="twitter:title" content="State Channels">
+  <meta name="twitter:card" content="website">
+  <meta name="twitter:description" content="State channels scale peer-to-peer blockchain interactions.">
   <meta name="twitter:url" content="https://statechannels.org/">
-  <meta name="twitter:image" content="../assets/logo.png">
+  <meta name="twitter:image" content="https://statechannels.org/assets/logo.svg">
+
   <link rel="stylesheet" href="/app.css">
+  <title>Standards | State Channels</title>
 </head>
 
 <body>
