--- a/public/team/index.html
+++ b/public/team/index.html
@@ -11,23 +11,24 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3531ff">
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="theme-color" content="#ffffff">
-  <title>Team | State Channels</title>
 
   <meta name="description" content="State Channels is an Open Source project that relies on the tireless support of individual contributors.">
-  <meta property="og:description" content="State Channels is an Open Source project that relies on the tireless support of individual contributors.">
-  <meta name="twitter:description" content="State Channels is an Open Source project that relies on the tireless support of individual contributors.">
 
   <meta property="og:site_name" content="State Channels">
   <meta property="og:title" content="Team | State Channels">
+  <meta property="og:description" content="State Channels is an Open Source project that relies on the tireless support of individual contributors.">
   <meta property="og:url" content="https://statechannels.org/team/">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="../assets/logo.png">
+  <meta property="og:image" content="https://statechannels.org/assets/logo.svg">
 
-  <meta name="twitter:card" content="website">
   <meta name="twitter:title" content="Team | State Channels">
+  <meta name="twitter:description" content="State Channels is an Open Source project that relies on the tireless support of individual contributors.">
+  <meta name="twitter:card" content="website">
   <meta name="twitter:url" content="https://statechannels.org/team/">
-  <meta name="twitter:image" content="../assets/logo.png">
+  <meta name="twitter:image" content="https://statechannels.org/assets/logo.svg">
+
   <link rel="stylesheet" href="/app.css">
+  <title>Team | State Channels</title>
 </head>
 <body>
   <div class="wrapper">
