fix twitter card type

--- a/public/standards/index.html
+++ b/public/standards/index.html
@@ -24,7 +24,7 @@
 
   <meta name="twitter:title" content="Standards | State Channels">
   <meta name="twitter:description" content="A Unified State Channel Specification for Ethereum">
-  <meta name="twitter:card" content="website">
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:url" content="https://statechannels.org/standards/">
   <meta name="twitter:image" content="https://statechannels.org/assets/logo.svg">
 
