--- a/public/team/index.html
+++ b/public/team/index.html
@@ -23,7 +23,7 @@
 
   <meta name="twitter:title" content="Team | State Channels">
   <meta name="twitter:description" content="State Channels is an Open Source project that relies on the tireless support of individual contributors.">
-  <meta name="twitter:card" content="website">
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:url" content="https://statechannels.org/team/">
   <meta name="twitter:image" content="https://statechannels.org/assets/logo.svg">
 
