--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   
   <meta name="twitter:title" content="State Channels">
   <meta name="twitter:description" content="State channels scale peer-to-peer blockchain interactions.">
-  <meta name="twitter:card" content="website">
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:url" content="https://statechannels.org/">
   <meta name="twitter:image" content="https://statechannels.org/assets/logo.svg">
 
