--- a/public/index_chinese/index.html
+++ b/public/index_chinese/index.html
@@ -23,7 +23,7 @@
   <meta property="og:image" content="https://statechannels.org/assets/logo.svg">
 
   <meta name="twitter:title" content="State Channels">
-  <meta name="twitter:card" content="website">
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:description" content="State channels scale peer-to-peer blockchain interactions.">
   <meta name="twitter:url" content="https://statechannels.org/">
   <meta name="twitter:image" content="https://statechannels.org/assets/logo.svg">
