--- a/public/standards/index.html
+++ b/public/standards/index.html
@@ -20,13 +20,13 @@
   <meta property="og:description" content="A Unified State Channel Specification for Ethereum">
   <meta property="og:url" content="https://statechannels.org/standards/">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://statechannels.org/assets/logo.svg">
+  <meta property="og:image" content="https://statechannels.org/assets/symbol.svg">
 
   <meta name="twitter:title" content="Standards | State Channels">
   <meta name="twitter:description" content="A Unified State Channel Specification for Ethereum">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:url" content="https://statechannels.org/standards/">
-  <meta name="twitter:image" content="https://statechannels.org/assets/logo.svg">
+  <meta name="twitter:image" content="https://statechannels.org/assets/symbol.svg">
 
   <link rel="stylesheet" href="/app.css">
 
