--- a/public/index_chinese/index.html
+++ b/public/index_chinese/index.html
@@ -20,13 +20,13 @@
   <meta property="og:description" content="State channels scale peer-to-peer blockchain interactions.">
   <meta property="og:url" content="https://statechannels.org/">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://statechannels.org/assets/logo.svg">
+  <meta property="og:image" content="https://statechannels.org/assets/symbol.svg">
 
   <meta name="twitter:title" content="State Channels">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:description" content="State channels scale peer-to-peer blockchain interactions.">
   <meta name="twitter:url" content="https://statechannels.org/">
-  <meta name="twitter:image" content="https://statechannels.org/assets/logo.svg">
+  <meta name="twitter:image" content="https://statechannels.org/assets/symbol.svg">
 
   <link rel="stylesheet" href="/app.css">
   <title>Standards | State Channels</title>
