--- a/public/team/index.html
+++ b/public/team/index.html
@@ -19,13 +19,13 @@
   <meta property="og:description" content="State Channels is an Open Source project that relies on the tireless support of individual contributors.">
   <meta property="og:url" content="https://statechannels.org/team/">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://statechannels.org/assets/logo.png">
+  <meta property="og:image" content="../assets/logo.png">
 
   <meta name="twitter:title" content="Team | State Channels">
   <meta name="twitter:description" content="State Channels is an Open Source project that relies on the tireless support of individual contributors.">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:url" content="https://statechannels.org/team/">
-  <meta name="twitter:image" content="https://statechannels.org/assets/logo.png">
+  <meta name="twitter:image" content="../assets/logo.png">
 
   <link rel="stylesheet" href="/app.css">
   <title>Team | State Channels</title>
