--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,13 @@
   <meta property="og:title" content="State Channels">
   <meta property="og:url" content="https://statechannels.org/">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://statechannels.org/assets/logo.png">
+  <meta property="og:image" content="./assets/logo.png">
   
   <meta name="twitter:title" content="State Channels">
   <meta name="twitter:description" content="State channels scale peer-to-peer blockchain interactions.">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:url" content="https://statechannels.org/">
-  <meta name="twitter:image" content="https://statechannels.org/assets/logo.png">
+  <meta name="twitter:image" content="./assets/logo.png">
 
   <link rel="stylesheet" href="/app.css">
   <title>State Channels</title>
