--- a/public/standards/index.html
+++ b/public/standards/index.html
@@ -20,13 +20,15 @@
   <meta property="og:description" content="A Unified State Channel Specification for Ethereum">
   <meta property="og:url" content="https://statechannels.org/standards/">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://statechannels.org/assets/logo.png">
+  <meta property="og:image" content="https://deploy-preview-21--statechannels-website.netlify.com/assets/symbol.png">
+  <meta property="og:image:width" content="400" />
+  <meta property="og:image:height" content="400" />
 
   <meta name="twitter:title" content="Standards | State Channels">
   <meta name="twitter:description" content="A Unified State Channel Specification for Ethereum">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:url" content="https://statechannels.org/standards/">
-  <meta name="twitter:image" content="https://statechannels.org/assets/logo.png">
+  <meta name="twitter:image" content="https://deploy-preview-21--statechannels-website.netlify.com/assets/symbol.png">
 
   <link rel="stylesheet" href="/app.css">
 
