add proper meta image url

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <meta property="og:title" content="State Channels">
   <meta property="og:url" content="https://statechannels.org/">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://deploy-preview-21--statechannels-website.netlify.com/assets/symbol.png">
+  <meta property="og:image" content="https://statechannels.org/assets/symbol.png">
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
   
@@ -26,7 +26,7 @@
   <meta name="twitter:description" content="State channels scale peer-to-peer blockchain interactions.">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:url" content="https://statechannels.org/">
-  <meta name="twitter:image" content="https://deploy-preview-21--statechannels-website.netlify.com/assets/symbol.png">
+  <meta name="twitter:image" content="https://statechannels.org/assets/symbol.png">
 
   <link rel="stylesheet" href="/app.css">
   <title>State Channels</title>
