--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,10 @@
             </p>
           </div>
         </footer>
-        <div class="hosted-by"><span>Hosted by</span> <img style="width: 5rem;" src="./assets/netlify-logo.svg" alt="Netlify" /></div>
+        <div class="hosted-by">
+          <span>Hosted by</span>
+          <a target="_blank" href="https://netlify.com/"><img style="width: 5rem;" src="./assets/netlify-logo.svg" alt="Netlify" /></a>
+        </div>
       </div>
     </div>
     <!-- End Footer -->
