--- a/public/index.html
+++ b/public/index.html
@@ -84,8 +84,8 @@
             <div class="callout__content">
               <h2 class="callout__content__heading">State channels scale peer-to-peer blockchain interactions.</h2>
               <div class="callout__content__buttons">
-                <a class="btn btn--stroke" href="https://rps.statechannels.org">try the demo</a>
-                <a class="btn btn--stroke" href="https://github.com/statechannels">read the code</a>
+                <a class="btn btn--stroke" target="_blank" href="https://rps.statechannels.org">try the demo</a>
+                <a class="btn btn--stroke" target="_blank" href="https://github.com/statechannels">read the code</a>
               </div>
             </div>
           </div>
