Add protocl docs url

--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,7 @@
               <h2 class="callout__content__heading">State channels scale peer-to-peer blockchain interactions.</h2>
               <div class="callout__content__buttons">
                 <a class="btn btn--stroke" target="_blank" href="https://rps.statechannels.org">try the demo</a>
+                <a class="btn btn--stroke" target="_blank" href="https://protocol.statechannels.org">see protocol docs</a>
                 <a class="btn btn--stroke" target="_blank" href="https://github.com/statechannels">read the code</a>
               </div>
             </div>
